--- a/src/assets/stylesheets/header.module.scss
+++ b/src/assets/stylesheets/header.module.scss
@@ -4,6 +4,7 @@
   background-color: #ffffff;
   left: 0;
   right: 0;
+  top: 0;
   position: fixed;
   margin: auto;
   padding: 0.5rem 0;
@@ -12,10 +13,11 @@
 
   div {
     margin: auto;
-    width: 90%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 90%;
+    max-width: 700px;
   }
 
   h3 {
